# joyagent-jdgenie

./: Deploy.md  Dockerfile  Genie_start.sh  LICENSE  NOTICE-Third Party  README.md  README_EN.md  README_mrag.md  check_dep_port.sh  start_genie.sh  start_genie_init.sh
docs/: svn_doc_tool.md
genie-backend/: .gitignore  README.md  build.sh  pom.xml  start.sh
genie-client/: .gitignore  README.md  pyproject.toml  server.py  start.sh
genie-client/app/: client.py  config.py  header.py  logger.py
genie-tool/: .env_template  .gitignore  README.md  pyproject.toml  server.py  start.sh
genie-tool/genie_tool/api/: __init__.py  file_manage.py  tool.py
genie-tool/genie_tool/db/: __init__.py  db_engine.py  file_table.py  file_table_op.py  svn_doc_table.py  svn_doc_table_op.py
genie-tool/genie_tool/model/: __init__.py  code.py  context.py  document.py  file_info.py  protocal.py
genie-tool/genie_tool/prompt/: code_interpreter.yaml  deepsearch.yaml  report.yaml
genie-tool/genie_tool/svn/: svn_ingest.py  svn_search.py
genie-tool/genie_tool/tool/: ci_agent.py  code_interpreter.py  deepsearch.py  final_answer_check.py  report.py
genie-tool/genie_tool/tool/search_component/: answer.py  query_process.py  reasoning.py  search_engine.py
genie-tool/genie_tool/util/: file_util.py  llm_util.py  log_util.py  middleware_util.py  prompt_util.py  sensitive_detection.py
ui/: .env  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  start.sh  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx  global.css  main.tsx
(+155 files in other folders)
